--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 30px;
-  width: 800px;
+  width: 1250px;
   margin: 100px auto;
   background-color: #9b9494;
   padding: 30px;
@@ -38,16 +38,23 @@ body {
 }
 .p {
   text-align: center;
+  font-weight: bold;
+  font-size: 25px;
 }
 .emptyblock {
-  width: 200px;
+  width: 550px;
+  height: 105px;
   background-color: #a8a4a4;
-  margin-top: 80px;
+  padding-top: 20px;
+  margin-top: 30px;
   margin-left: 70px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  font-size: 45px;
+  font-weight: bold;
 }
 .currencies {
+  width: 140px;
   display: flex;
   list-style: none;
   padding: 0;
@@ -61,8 +68,8 @@ body {
     padding: 10px 20px;
     border-right: 1px solid rgba(0, 0, 0, 0.05);
     cursor: pointer;
-    justify-content: center;
-    flex: 1;
+    // justify-content: center;
+    // flex: 1;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.03);
