--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,7 @@ body {
   height: 105px;
   background-color: #a8a4a4;
   padding-top: 20px;
+  padding-left: 20px;
   margin-top: 30px;
   margin-left: 70px;
   border: 1px solid rgba(0, 0, 0, 0.1);
